feat(README): enhance project documentation with new features, local setup instructions, and observability details